<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/putih"
    android:padding="20dp"
    tools:context=".MainActivity">
    <de.hdodenhof.circleimageview.CircleImageView
        android:src="@drawable/risna"
        android:layout_width="900dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:textAlignment="center"/>

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:text="@string/this_Profil"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@android:color/black"
    android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="120dp"
        android:textColor="@android:color/black"
        android:text="@string/isiNama"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/black"
        android:text="@string/Nama"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:layout_marginLeft="120dp"
        android:textColor="@android:color/black"
        android:text="@string/isiNIM"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/black"
        android:text="@string/NIM"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:layout_marginLeft="120dp"
        android:textColor="@android:color/black"
        android:text="@string/isiprodi"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/black"
        android:text="@string/prodi"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:layout_marginLeft="120dp"
        android:textColor="@android:color/black"
        android:text="@string/isiasal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/black"
        android:text="@string/asal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="120dp"
        android:textColor="@android:color/black"
        android:text="@string/isihobi"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:textColor="@android:color/black"
        android:layout_marginLeft="10dp"
        android:text="@string/hobi"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:layout_marginLeft="120dp"
        android:textColor="@android:color/black"
        android:text="@string/isimoto"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/black"
        android:text="@string/moto"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="460dp"
        android:textColor="@android:color/black"
        android:layout_marginLeft="120dp"
        android:text="@string/isiklub"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="460dp"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/black"
        android:text="@string/klub"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:layout_marginLeft="120dp"
        android:textColor="@android:color/black"
        android:text="@string/isilagu"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/black"
        android:text="@string/lagu"/>

</RelativeLayout>